src/index.css
* {
  box-sizing: border-box;
}

html, body, #container {
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #000000;
  color: #CCCCCC;
  font: 14px/normal 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
}

.Musika-App {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.Musika-Player {
  user-select: none;
  height: 2em;
  flex-shrink: 0;
  cursor: default;
}

.Musika-Player button {
  width: 2em;
  height: 2em;
}

.Musika-TimeSlider {
  height: 2em;
  display: inline-block;
  margin-left: 0.5em;
}

.Musika-TimeSeeker {
  height: 2em;
  display: inline-block;
  margin-left: 0.2em;
}

.Musika-TimeSeeker input[type=time] {
  height: 100%;
  border: none;
  outline: none;
  -moz-appearance: textfield;
  padding: 0 0 0 1em;

  margin: 0px;
  width: 5em;
  vertical-align: top;
}

.Musika-TimeSeeker input[type=time]::-webkit-inner-spin-button,
.Musika-TimeSeeker input[type=time]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.Musika-Player input[type=range] {
  height: 0.8em;
  margin: 0 0.5em;
  cursor: pointer;
}

.Musika-CPULoad {
  user-select: none;
  width: 100%;
  height: 0.73rem;
  background: linear-gradient(to right, rgba(141,249,87,1) 0%, rgba(255,255,0,1) 30%, rgba(249,145,87,1) 50%, rgba(242,119,122,1) 100%);
  color: white;
  flex-shrink: 0;
  font-size: 8px;
  position: relative;
  cursor: default;
}

.Musika-CPULoad > .black {
  position: absolute;
  right: 0;
  height: 1rem;
  background-color: #181818;
}

.Musika-CPULoad > .left, .Musika-CPULoad > .right {
  text-shadow: 0px 0px 4px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1);
  margin: 0 2px;
}

.ace_editor {
  width: 100%;
  height: 100%;
}

.ace_scroller, .ace_gutter {
  padding-top: 0.1em;
}

.ace_gutter-active-line {
  margin-top: 0.1em;
}

.ace_scroller::before, .ace_gutter::before {
  position: absolute;
  top: 0;
  width: 100%;
  height: 1.5em;
  content: '';
  background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 1%, rgba(0,0,0,0.25) 30%, rgba(0,0,0,0.1) 60%, rgba(0,0,0,0) 100%);
  z-index: 1000;
  pointer-events: none;
}

.ace_scroller::after, .ace_gutter::after {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 1.5em;
  content: '';
  background: linear-gradient(to top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 1%, rgba(0,0,0,0.25) 30%, rgba(0,0,0,0.1) 60%, rgba(0,0,0,0) 100%);
  z-index: 1000;
  pointer-events: none;
}

.Musika-bottomPanel {
  flex-shrink: 0;
  background-color: #2D2D2D;
  height: 1.6em;
  user-select: none;
}

.Musika-bottomPanel button {
  height: 100%;
}

.Musika-bottomPanel select {
  height: 100%;
}

button i.fa {
  vertical-align: middle;
}

button {
  color: #fbfbfb;
  font: 14px/normal 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
  border: none;
  outline: none;
  cursor: pointer;
}

button, button.color-orange {
  background-color: #F99157;
}

button:hover, button.color-orange:hover {
  background-color: #E98147;
}

button:active, button.color-orange:active {
  background-color: #FFB177;
}

button.color-green {
  background-color: #40e889;
}

button.color-green:hover {
  background-color: #30d879;
}

button.color-green:active {
  background-color: #50f899;
}

button.color-green2 {
  background-color: #99CC99;
}

button.color-green2:hover {
  background-color: #89BC89;
}

button.color-green2:active {
  background-color: #A9DCA9;
}

button.color-purple {
  background-color: #bc89bc;
}

button.color-purple:hover {
  background-color: #ac79ac;
}

button.color-purple:active {
  background-color: #CC99CC;
}

button.color-red {
  background-color: #f2777a;
}

button.color-red:hover {
  background-color: #e2676a;
}

button.color-red:active {
  background-color: #ff878a;
}

button.color-blue {
  background-color: #66CCCC;
}

button.color-blue:hover {
  background-color: #56BCBC;
}

button.color-blue:active {
  background-color: #76DCDC;
}

select {
  border: none;
  outline: none;
  cursor: pointer;
}


.left {
  position: absolute;
  left: 0;
}

.right {
  position: absolute;
  right: 0;
}

